--- a/video-processing-service/package.json
+++ b/video-processing-service/package.json
@@ -14,6 +14,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google-cloud/storage": "^7.11.1",
     "express": "^4.19.2",
+    "firebase-admin": "^12.1.1",
     "fluent-ffmpeg": "^2.1.3"
   },
   "devDependencies": {
